<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_mis_vuelos"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh_mis_vuelos"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
            android:id="@+id/text_mis_vuelos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_mis_vuelos"
            android:choiceMode="multipleChoiceModal"
            android:divider="@null"
            android:dividerHeight="0dp"
             />

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_add_white_24px"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/add_button"/>

    <!-- Solo se muestra cuando no hay vuelos -->
    <FrameLayout
        android:id="@+id/emptyElement"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/no_flights"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/darkgrey"
                android:padding="0dp"
                android:paddingBottom="0dp"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp" />
            <TextView
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginTop="270dp"
                android:text="@string/plus_arrow_text"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="bottom|end"
                android:src="@drawable/ic_add_white_24px"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="165dp"
                android:paddingStart="20dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/empty_arrow"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="85dp"
                android:layout_marginBottom="40dp"
                />

    </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/empty_back"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>
        </FrameLayout>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>